implemented devise for users

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
 <div class="jumbotron center">
   <h1>Welcome to my app</h1>
+  <% if user_signed_in? %>
+  #do something
+  <% else %>
   <p>
-    <%= link_to "Login", "http://www.google.com",class:"btn btn-default" %>
-    <%= link_to "Sign up", "http://www.google.com",class:"btn btn-primary" %>
+    <%= link_to "Login", new_user_session_path,class:"btn btn-default" %>
+    <%= link_to "Sign up", new_user_registration_path,class:"btn btn-primary" %>
   </p>
+  <% end %>
 </div>
