--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="panel-body">
 
-  <%= form_for(@pin) do |f| %>
+  <%= form_for @pin, html: { multipart: true } do |f| %>
     <% if @pin.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
@@ -12,6 +12,14 @@
         </ul>
       </div>
     <% end %>
+
+  <div class="form-group">
+    <div class="field">
+      <%= f.label :image %><br>
+      <%= f.file_field :image, class: "form-control"  %>
+    </div>
+  </div>
+
   <div class="form-group">
     <div class="field">
       <%= f.label :description %><br>
