--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -5,6 +5,9 @@
 <table>
   <thead>
     <tr>
+
+      <th>Image</th>
+      
       <th>Description</th>
       <th>User</th>
       <th colspan="3"></th>
@@ -14,6 +17,7 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <td><%= image_tag pin.image.url(:medium) %></td>
         <td><%= pin.description %></td>
         <td><%= pin.user.email %></td>
         
