--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -16,3 +16,6 @@
         </div>
       <% end %>
 </div>
+<div class="center">
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
+</div>
