--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,9 +7,14 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, :autofocus => true, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :email %>
-  <%= f.email_field :email, :autofocus => true, class: "form-control" %>
-</div>
+    <%= f.email_field :email, :autofocus => true, class: "form-control" %>
+  </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
