--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -4,7 +4,7 @@
           <%= link_to image_tag(pin.image.url(:thumb)), pin %>
           <div class="panel-body">
             <%= pin.description %><br/>
-           <strong><%= pin.user.email %></strong>    
+           <strong><%= pin.user.name %></strong>    
             
             <% if pin.user == current_user %>
               <div class="actions">
