--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -9,7 +9,7 @@
             <% if pin.user == current_user %>
               <div class="actions">
                 <%= link_to 'Edit', edit_pin_path(pin) %>
-                <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' }%>
+                <%= link_to 'Delete', pin, method: :delete, data: { confirm: 'Are you sure?' }%>
               </div>
             <% end %>
         </div>
