--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -2,7 +2,7 @@
       <% @pins.each do |pin| %>
         <div class="box panel panel-default">
           <%= link_to image_tag(pin.image.url(:thumb)), pin %>
-          <div class="panel-body">
+          <div class="panel-body">s
             <%= pin.description %><br/>
            <strong><%= pin.user.name %></strong>    
             
